--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -5,12 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Indecision App</title>
-    <link rel="icon" type="image/png" href="/uw.png"/>
+    <link rel="icon" type="image/png" href="./uw.png"/>
 </head>
 
 <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 
 </html>
